fix: product form overflow

--- a/src/css/product-form.css
+++ b/src/css/product-form.css
@@ -1,7 +1,7 @@
 .product-form-wrapper {
   position: relative;
   height: 100%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   overflow-y: visible;
 }
 
